--- a/Interface/interface/views/users.pug
+++ b/Interface/interface/views/users.pug
@@ -1,6 +1,30 @@
 extends layout
 
 block content
+
+  <!-- The Modal Pub -->
+  div(class="modal" id="pm")
+    div(class="modal-dialog").card
+      div(class="modal-content")
+      
+      <!-- Nova publicaçao -->
+        <!-- Modal Header -->
+        div(class="modal-header")
+          h4(class="modal-title") New Message
+          button(type="button" class="close" data-dismiss="modal") &times
+        
+        <!-- Modal body -->
+        div(class="modal-body")
+          form(action='/messages/newPm' method='POST') 
+                div.form-group
+                  label(for='text' class='cols-sm-2 control-label') Text:
+                  textarea(rows="4" cols="50" class='form-control' name='text' id='text')  
+                div.form-group
+                  button.btn.btn-primary(type='submit' style='width:100%;' ) Send
+        <!-- Modal footer -->
+        div(class="modal-footer")
+          button(type="button" class="btn btn-danger" data-dismiss="modal") Close
+
   .main.container
     h1 Users
       br
@@ -18,6 +42,7 @@ block content
                 td(style="color:white")= u.name
                 td
                   a.card-link(href='/users/profile/' + u.number) Profile
+                  button(type='button' data-toggle="modal" data-target="#pm") Private message
                 
 
 
