--- a/Interface/interface/views/navbar.pug
+++ b/Interface/interface/views/navbar.pug
@@ -14,17 +14,12 @@ nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
                 a.nav-item.nav-link(href='/team') Team
                 a.nav-item.nav-link(href='/about') About
                 div(class="container")
-                    div(class="dropdown")
-                        a.btn.btn-light.pull-md-right(style="padding: 3px;" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown")
-                            img.avatar.img-circle.hidden-xs-down(style="max-width:30px; max-height:30px;" src="https://i.imgur.com/uYq21Ou.png")
-                        if user
-                            a.nav-item.nav-link.btn.btn-logout.pull-md-right(href='/auth/logout') Logout
-                        else
-                            a.nav-item.nav-link.btn.btn-login.pull-md-right(href='/auth/login') Login/Register
-            form(method='GET' height='10%')
-                div(class='container h-100')        
-            div(class='container h-100')        
-                div(class='container h-100')        
+                    if user
+                        a.nav-item.nav-link.btn.btn-logout.pull-md-right(href='/auth/logout') Logout
+                    else
+                        a.nav-item.nav-link.btn.btn-login.pull-md-right(href='/auth/login') Login/Register
+            form(method='GET')
+                div(class='container h-100')         
                     div(class='d-flex justify-content-center h-100')
                         div(class='searchbar')
                             input.nav-item(class='search_input' type='text' name='search' placeholder='Search')
