--- a/Interface/interface/views/pm.pug
+++ b/Interface/interface/views/pm.pug
@@ -19,9 +19,9 @@ block content
                             label(for='text' class='cols-sm-2 control-label') To
                             br
                             label(for='text' class='cols-sm-2 control-label') Name:
-                                input(type="text" name="myName" id="myName" value=userI.name)   
+                                input(type="text" name="myName" id="myName" value="")   
                             label(for='text' class='cols-sm-2 control-label') Number:
-                                input(type="text" name="myId" id="myId" value=userI.number)   
+                                input(type="text" name="myId" id="myId" value="")   
                             div.form-group
                                 label(for='text' class='cols-sm-2 control-label') Text
                                 textarea(rows="4" cols="50" class='form-control' name='text' id='text') 
